--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,23 +38,16 @@ set-option -g renumber-windows on
 # set status-bg default
 
 # Fix colors
-# set -g default-terminal "xterm-256color" # NOTE: Not officially supported
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color" # NOTE: Not officially supported
+# set -g default-terminal "screen-256color"
 
 set-window-option -g utf8 on
 
 # set-option -g pane-active-border-fg red
 # set-option -g pane-border-fg grey
 
-# tmux-powerline
-set-option -g status on
-set-option -g status-interval 2
-set-option -g status-utf8 on
-set-option -g status-justify "centre"
-set-option -g status-left-length 60
-set-option -g status-right-length 90
-set-option -g status-left "#(~/.src/tmux-powerline/powerline.sh left)"
-set-option -g status-right "#(~/.src/tmux-powerline/powerline.sh right)"
+# run-shell "powerline-daemon -q"
+# source "/Users/Andrew/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # Show wemux users
 set -g status-right "#(wemux status_users)"
