updates to dotfiles

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -115,7 +115,7 @@ bind C-c run "tmux save-buffer - | pbcopy"
 bind C-v run "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
 
 # Session list/choose
-bind C-s choose-tree
+bind c-s choose-tree
 
 # Move windows around
 bind -n C-S-Left swap-window -t -1
