--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,8 +41,6 @@ set-option -g renumber-windows on
 set -g default-terminal "xterm-256color" # NOTE: Not officially supported
 # set -g default-terminal "screen-256color"
 
-set-window-option -g utf8 on
-
 # set-option -g pane-active-border-fg red
 # set-option -g pane-border-fg grey
 
@@ -64,11 +62,11 @@ bind C-f send-prefix
 
 # Smart pane switching with awareness of vim splits
 # bind u run "display (tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-24.5?)(diff)?$'"
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-24.5?|n?vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-24.5?|n?vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-24.5?|n?vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-24.5?|n?vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-24.5?|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-25.1?|n?vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-25.1?|n?vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-25.1?|n?vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-25.1?|n?vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-25.1?|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 
 unbind /
@@ -124,3 +122,5 @@ bind -n C-S-Right swap-window -t +1
 # Show current wemux connected users
 unbind u
 bind u run-shell 'wemux display_users'
+
+set-option -g default-shell /usr/local/bin/zsh
