--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Andy Orahoske
-	email = andrew.orahoske@zipscene.com
+	email = andy.orahoske@kroger.com
 [mergetool]
 	keepBackup = true
 [core]
