--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,11 +62,11 @@ bind C-f send-prefix
 
 # Smart pane switching with awareness of vim splits
 # bind u run "display (tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-24.5?)(diff)?$'"
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-25.1?|n?vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-25.1?|n?vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-25.1?|n?vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-25.1?|n?vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-25.1?|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-25.2?|n?vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-25.2?|n?vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-25.2?|n?vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-25.2?|n?vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?emacs-25.2?|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 
 unbind /
@@ -107,13 +107,13 @@ bind -n C-o select-pane -t :.-
 
 bind C-q command-prompt -I "htop" -p "Quick window command: " "new-window '%%'"
 
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
-bind C-c run "tmux save-buffer - | pbcopy"
-bind C-v run "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
+# bind -t vi-copy 'v' begin-selection
+# bind -t vi-copy 'y' copy-selection
+# bind C-c run "tmux save-buffer - | pbcopy"
+# bind C-v run "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
 
 # Session list/choose
-bind c-s choose-tree
+# bind c-s choose-tree
 
 # Move windows around
 bind -n C-S-Left swap-window -t -1
